# exif-photo-organizer

./: .env.example  .gitignore  README.md  exif-photo-organizer.spec  pyproject.toml  update_exif.py
.github/workflows/: release.yml
src/exif_photo_organizer/: main.py  update_exif.py
